Update README with project details and instructions
Added project overview, requirements, compile and run instructions, output files, and JavaFX dashboard details.